<resources>
    <string name="app_name">Blush Finance</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_item_name_hint">Item Name (e.g., Salary, Groceries)</string>
    <string name="dialog_item_amount_hint">Amount (e.g., 1500)</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_add">Add</string>
    <string name="dialog_title_add_income">Add New Income</string>
    <string name="dialog_title_add_expense">Add New Expense</string>
    <string name="welcome_text">Welcome </string>
    <string name="balance_label">Your Balance</string>
    <string name="balance_amount_label">£10,000.00</string>
    <string name="income_label">Income</string>
    <string name="expenses_label">Expenses</string>
    <string name="transactions_label">Transactions</string>
    <string name="spending_label">Spending</string>
    <string name="ac_settings_icon">Settings</string>
    <string name="ac_dot">Dot</string>
    <string name="news_label">News</string>
</resources>