<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/ac_settings_icon"
        app:layout_constraintEnd_toEndOf="@id/main_scroll"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/welcome_text"
        android:textColor="@color/menu_dark_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/main_scroll"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/main_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_home_scroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome" >

        <LinearLayout
            android:id="@+id/finance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/finance_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/menu_card"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/balance_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/bg_home_card_detail"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="5dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:id="@+id/ic_balance_dot"
                                android:layout_width="12dp"
                                android:layout_height="12dp"
                                android:layout_marginEnd="8dp"
                                android:contentDescription="@string/ac_dot"
                                app:srcCompat="@drawable/ic_balance_dot" />

                            <TextView
                                android:id="@+id/txt_balance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/balance_label"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/txt_balance_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="£10,000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/ic_income_dot"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/ac_dot"
                        app:layout_constraintEnd_toStartOf="@id/txt_income"
                        app:layout_constraintTop_toTopOf="@id/txt_income"
                        app:srcCompat="@drawable/ic_income_dot" />

                    <TextView
                        android:id="@+id/txt_income"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/income_label"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/balance_container" />

                    <TextView
                        android:id="@+id/txt_income_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="£2,500"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/txt_income"
                        app:layout_constraintTop_toBottomOf="@id/txt_income" />

                    <ImageView
                        android:id="@+id/ic_expenses_dot"
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/ac_dot"
                        app:layout_constraintEnd_toStartOf="@id/txt_expenses"
                        app:layout_constraintTop_toTopOf="@id/txt_expenses"
                        app:srcCompat="@drawable/ic_expenses_dot" />

                    <TextView
                        android:id="@+id/txt_expenses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="40dp"
                        android:text="@string/expenses_label"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/balance_container" />

                    <TextView
                        android:id="@+id/txt_expenses_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="£2,100"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@id/txt_expenses"
                        app:layout_constraintTop_toBottomOf="@id/txt_expenses" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/transactions_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/menu_card"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/txt_trans_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/transactions_label"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/spending_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                app:cardBackgroundColor="@color/menu_card"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/txt_spend_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spending_label"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>